data/derived/comb/progs/unify/prog7517.ml.out
Characters 185-201:
  if value > 9 then [(1,value-10)]@a
                    ^^^^^^^^^^^^^^^^
Error: This expression has type (int * int) list
       but an expression was expected of type int list
       Type int * int is not compatible with type int 
